# echomap

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  bootstrap.sh  miniserve.sh  todo.md  vcpkg-configuration.json  vcpkg.json
cmake/: ApplicationTargets.cmake  DoxygenTarget.cmake  EmbedWGSL.cmake  ImGui.cmake  ImPlot.cmake  ImPlot3D.cmake
resources/: ExampleProject.json  ProjectSchema.json
src/: App.cpp  BidirectionalUnorderedMapping.hpp  EchoMap.cpp  EchoMap.hpp  EchoMapNative.cpp  EchoMapNative.hpp  EchoMapWeb.cpp  EchoMapWeb.hpp  IDAllocator.hpp  IPanel.hpp  ImGuiConfig.h  JSBridge.cpp  Logger.cpp  Logger.hpp  Object.hpp  ParametersPanel.cpp  ParametersPanel.hpp  Project.cpp  Project.hpp  RenderPanel.cpp  RenderPanel.hpp  RobotoMedium.hpp  SimulationParameters.cpp  SimulationParameters.hpp  StaticInstanceController.cpp  StaticInstanceController.hpp  SurfaceFactory.cpp  SurfaceFactory.hpp  VariantHelpers.hpp  ViewportRenderer.cpp  ViewportRenderer.hpp  WAVData.cpp  WAVData.hpp  WaveformViewPanel.cpp  WaveformViewPanel.hpp  WebCFD.cpp  WebCFD.hpp
src/actions/: ActionController.hpp  ActionControllerBase.hpp  JSActionController.cpp  JSActionController.hpp  NativeActionController.cpp  NativeActionController.hpp
src/audio/: AudioChannel.cpp  AudioChannel.hpp  Sensor.cpp  Sensor.hpp  Signal.cpp  Signal.hpp  WAVData.cpp  WAVData.hpp
src/errors/: ConfigurationError.cpp  ConfigurationError.hpp  IgnoredWarning.cpp  IgnoredWarning.hpp  LocatableError.cpp  LocatableError.hpp
src/notifications/: AddChannelMappingNotification.cpp  AddChannelMappingNotification.hpp  AllNotifications.hpp  AllNotificationsFwd.hpp  CancelProjectLoadNotification.cpp  CancelProjectLoadNotification.hpp  ClearErrorNotification.hpp  CompleteProjectLoadNotification.cpp  CompleteProjectLoadNotification.hpp  ModifySensorColourNotification.cpp  ModifySensorColourNotification.hpp  ModifySensorPositionNotification.cpp  ModifySensorPositionNotification.hpp  ProjectSelectedNotification.hpp  ProjectSelectionCompleteNotification.hpp  RegisterVFSMappingNotification.cpp  RegisterVFSMappingNotification.hpp
src/objects/: BidirectionalUnorderedMapping.hpp  FrequencySpectrum.cpp  FrequencySpectrum.hpp  FrequencySpectrumFactory.hpp  IDAllocator.hpp  Object.hpp  Project.cpp  Project.hpp  Sensor.cpp  Sensor.hpp  Signal.cpp  Signal.hpp  SignalFactory.cpp  SignalFactory.hpp
src/panels/: ArrayViewPanel.cpp  ArrayViewPanel.hpp  ChannelMappingPanel.cpp  ChannelMappingPanel.hpp  ErrorModal.cpp  ErrorModal.hpp  IPanel.hpp  IndividualUploadModal.cpp  IndividualUploadModal.hpp  MapSourcesModal.cpp  MapSourcesModal.hpp  MenuPanel.cpp  MenuPanel.hpp  ProjectPanel.cpp  ProjectPanel.hpp  SensorGeometryPanel.cpp  SensorGeometryPanel.hpp  SignalDFTPanel.cpp  SignalDFTPanel.hpp  (+6 more)
vcpkg-overlay/: README.md
(+82 files in other folders)
